testing game rest api calls

--- a/game-stock-ui/src/app/app.component.html
+++ b/game-stock-ui/src/app/app.component.html
@@ -28,6 +28,7 @@
     </section>
 
     <app-game-list class="columns is-multiline is-centered is-vcentered is-flex-grow-1 is-align-content-center"></app-game-list>
+    <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
 </div>
 
 </body>
