--- a/game-stock-ui/src/app/app.component.html
+++ b/game-stock-ui/src/app/app.component.html
@@ -1,35 +1,114 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Game Stock</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-    <style>
-        html,
-        body,
-        body > div {
-            width: 100%;
-            min-height: 100vh;
-            overflow: hidden;
-        }
-    </style>
-</head>
-<body class="content has-background-dark">
-<div class="is-flex is-flex-direction-column">
+<mat-toolbar color="primary" class="navbar">
+  <div>Game Stock</div>
+  <div>
+    <span>Home</span>
+    <span>About</span>
+  </div>
+</mat-toolbar>
+<form class="game-form">
+  <mat-form-field class="example-full-width">
+    <mat-label>Name</mat-label>
+    <input matInput required />
+  </mat-form-field>
 
-    <section class="hero is-link">
-        <div class="hero-body">
-            <p class="title">Welcome to Game Stock</p>
-            <p class="subtitle">One stop spot for game stock stalking</p>
-        </div>
-    </section>
+  <mat-divider></mat-divider>
 
-    <app-game-list class="columns is-multiline is-centered is-vcentered is-flex-grow-1 is-align-content-center"></app-game-list>
-    <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
-</div>
+  <mat-form-field class="example-full-width">
+    <mat-label>Description</mat-label>
+    <textarea matInput required></textarea>
+  </mat-form-field>
 
-</body>
-</html>
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <mat-label>Tags</mat-label>
+    <mat-select multiple>
+      <mat-option>Mystery</mat-option>
+      <mat-option>Confusing</mat-option>
+      <mat-option>Outdoor</mat-option>
+      <mat-option>Indoor</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <mat-label>Category</mat-label>
+    <mat-select required>
+      <mat-option>Mystery</mat-option>
+      <mat-option>Confusing</mat-option>
+      <mat-option>Outdoor</mat-option>
+      <mat-option>Indoor</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <label id="example-radio-group-label">Maturity Rating</label>
+  <mat-radio-group class="example-radio-group">
+    <mat-radio-button value="EARLY_CHILDHOOD" class="example-radio-button"
+      >Early Childhood</mat-radio-button
+    >
+    <mat-radio-button value="EVERYONE" class="example-radio-button"
+      >Everyone 10+</mat-radio-button
+    >
+    <mat-radio-button value="TEEN" class="example-radio-button"
+      >Teen</mat-radio-button
+    >
+    <mat-radio-button value="MATURE" class="example-radio-button"
+      >Mature</mat-radio-button
+    >
+    <mat-radio-button value="RATING_PENDING" class="example-radio-button"
+      >Rating Pending</mat-radio-button
+    >
+    <mat-radio-button value="ADULT_ONLY" class="example-radio-button"
+      >Adults Only</mat-radio-button
+    >
+  </mat-radio-group>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <mat-label>Min Age</mat-label>
+    <input matInput type="number" required />
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <mat-label>Complexity Rating</mat-label>
+    <input matInput type="number" required />
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <mat-label>How to Play</mat-label>
+    <textarea matInput required></textarea>
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <mat-label>Material Needed</mat-label>
+    <mat-select multiple>
+      <mat-option>Paper</mat-option>
+      <mat-option>Pen</mat-option>
+      <mat-option>Mind</mat-option>
+      <mat-option>Notebook</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-divider></mat-divider>
+
+  <mat-form-field class="example-full-width">
+    <mat-label>Similar Games</mat-label>
+    <mat-select multiple>
+      <mat-option>Mafia1</mat-option>
+      <mat-option>Mafia2</mat-option>
+      <mat-option>Mafia3</mat-option>
+      <mat-option>Mafia4</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+</form>
