--- a/game-stock-ui/src/app/app.component.css
+++ b/game-stock-ui/src/app/app.component.css
@@ -1,27 +1,26 @@
-.navbar {
-  justify-content: space-between;
+.toolbar{
+  justify-content: space-between
+}
+
+.container {
+  display: flex; /* or inline-flex */
+  align-items: center;
+
 }
 
 span {
   padding-right: 1rem;
 }
 
-.game-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
+mat-sidenav-container {
+  height: 100%;
 }
 
-.example-full-width {
-  width: 100%;
+mat-sidenav, mat-sidenav-content {
+  padding: 16px;
 }
 
-.example-radio-group {
-    display: flex;
-    flex-direction: column;
-    margin: 15px 0;
-  }
-  
-  .example-radio-button {
-    margin: 5px;
-  }
+mat-sidenav{
+  background-color:lightsteelblue;
+  width: 200px;
+}
