adding validation changes

--- a/game-stock-ui/src/app/game-input-form/game-input-form.component.html
+++ b/game-stock-ui/src/app/game-input-form/game-input-form.component.html
@@ -1,6 +1,6 @@
 <form #userForm="ngForm" class="form-container">
-  {{userForm.value | json}}
-  {{gameModel | json}}
+  <!-- {{userForm.value | json}}
+  {{gameModel | json}} -->
   <mat-card>
     <mat-card-header>
       <mat-card-title>Game Information</mat-card-title>
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="col-md-6">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Name" name="name" [(ngModel)]="gameModel.name" />
+            <input matInput required #name = "ngModel" placeholder="Name" name="name" [(ngModel)]="gameModel.name" />
           </mat-form-field>
         </div>
       </div>
@@ -17,16 +17,29 @@
       <div class="row">
         <div class="col-sm-6">
           <mat-form-field class="full-width">
-            <textarea matInput placeholder="Description" name="description"
+            <textarea matInput required placeholder="Description" name="description"
               [(ngModel)]="gameModel.description"></textarea>
           </mat-form-field>
         </div>
       </div>
-
+      <div class="row">
+        <div class="col-md-12">
+            <mat-radio-group #maturityRating = "ngModel" class="margin-left" name="maturityRating" [(ngModel)]="gameModel.maturityRating" required>
+              <mat-radio-button value="EARLY_CHILDHOOD">Early Childhood</mat-radio-button>
+              <mat-radio-button value="EVERYONE">Everyone</mat-radio-button>
+              <mat-radio-button value="EVERYONE_10">Everyone 10+</mat-radio-button>
+              <mat-radio-button value="TEEN">Teen</mat-radio-button>
+              <mat-radio-button value="MATURE">Mature</mat-radio-button>
+              <mat-radio-button value="RATING_PENDING">Rating Pending</mat-radio-button>
+              <mat-radio-button value="ADULT_ONLY">Adults Only</mat-radio-button>
+            </mat-radio-group>
+            
+        </div>
+      </div>
       <div class="row">
         <div class="col-sm-6">
           <mat-form-field class="full-width">
-            <textarea matInput placeholder="How To Play" name="howToPlay" [(ngModel)]="gameModel.howToPlay"></textarea>
+            <textarea matInput required placeholder="How To Play" name="howToPlay" [(ngModel)]="gameModel.howToPlay"></textarea>
           </mat-form-field>
         </div>
       </div>
@@ -35,7 +48,7 @@
         <div class="col-sm-6">
           <mat-form-field class="full-width">
             <mat-label>Category</mat-label>
-            <mat-select name="category" [(ngModel)]="gameModel.category">
+            <mat-select required name="category" [(ngModel)]="gameModel.category">
               <mat-option value="indoor">Indoor</mat-option>
               <mat-option value="outdoor">Outdoor</mat-option>
             </mat-select>
@@ -47,7 +60,7 @@
         <div class="col-sm-6">
           <mat-form-field class="full-width">
             <mat-label>Tags</mat-label>
-            <mat-select multiple name="tags" [(ngModel)]="gameModel.tags">
+            <mat-select required multiple name="tags" [(ngModel)]="gameModel.tags">
               <mat-option value="mystery">Mystery</mat-option>
               <mat-option value="horror">Horror</mat-option>
             </mat-select>
@@ -57,7 +70,7 @@
       <div class="row">
         <div class="col-md-6">
           <mat-form-field>
-            <input matInput type="number" placeholder="Min Players" name="minPlayers" [(ngModel)]="gameModel.suggestedNumberOfPlayers.minPlayers" />
+            <input matInput required type="number"  #minPlayers = "ngModel" min = "1" placeholder="Min Players" name="minPlayers" [(ngModel)]="gameModel.suggestedNumberOfPlayers.minPlayers" />
           </mat-form-field>
           <span></span>
           <mat-form-field>
@@ -65,26 +78,14 @@
           </mat-form-field>
           <span></span>
           <mat-form-field>
-            <input matInput type="number" placeholder="Complexity Rating" name="complexityRating" [(ngModel)]="gameModel.complexityRating"/>
+            <input matInput required type="number" placeholder="Complexity Rating" name="complexityRating" [(ngModel)]="gameModel.complexityRating"/>
           </mat-form-field>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <mat-radio-group class="margin-left" name="maturityRating" [(ngModel)]="gameModel.maturityRating">
-            <mat-radio-button value="EARLY_CHILDHOOD">Early Childhood</mat-radio-button>
-            <mat-radio-button value="EVERYONE">Everyone</mat-radio-button>
-            <mat-radio-button value="EVERYONE_10">Everyone 10+</mat-radio-button>
-            <mat-radio-button value="TEEN">Teen</mat-radio-button>
-            <mat-radio-button value="MATURE">Mature</mat-radio-button>
-            <mat-radio-button value="RATING_PENDING">Rating Pending</mat-radio-button>
-            <mat-radio-button value="ADULT_ONLY">Adults Only</mat-radio-button>
-          </mat-radio-group>
-        </div>
-      </div>
+
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" (click) = "createGame()">Save</button>
+      <button [disabled]="userForm.form.invalid || maturityRating.untouched" mat-raised-button color="primary" (click) = "createGame()">Save</button>
     </mat-card-actions>
   </mat-card>
 </form>
