--- a/game-stock-ui/src/app/game-search/game-search.component.css
+++ b/game-stock-ui/src/app/game-search/game-search.component.css
@@ -11,3 +11,11 @@ div {
 .search-input {
     width: 400px;
 }
+
+button:hover, button:active {
+    color: lightgrey
+}
+
+mat-select:hover, mat-select:active {
+    color: lightgrey
+}
