--- a/game-stock-ui/src/app/game-input-form/game-input-form.component.css
+++ b/game-stock-ui/src/app/game-input-form/game-input-form.component.css
@@ -1,16 +1,3 @@
- 
-.full-width{
-    width: 100%;
-}
-
-.top-padding{
-    padding-top: 3px;
-}
-
-.margin-left mat-radio-button:not(:first-child){
-    margin-left:10px;
-}
-
-.form-container{
-    margin: 100px;
+mat-form-field {
+    width: 100%
 }
